# DesktopOrganizer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: config.rs  desktop.rs  i18n.rs  icons.rs  main.rs  shapes.rs  shortcut.rs  tray.rs
tools/: check_icon.py  generate_icon.py  inject_icon.bat  make_icon.py
