[package]
name = "desktop-organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = 2
lto = false
